Starting with types

--- a/en/Fundamentals.ipynb
+++ b/en/Fundamentals.ipynb
@@ -89,7 +89,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "fsharp"
+     "languageId": "dotnet-interactive.fsharp"
     }
    },
    "outputs": [],
@@ -113,7 +113,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "fsharp"
+     "languageId": "dotnet-interactive.fsharp"
     }
    },
    "outputs": [],
@@ -140,7 +140,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "fsharp"
+     "languageId": "dotnet-interactive.fsharp"
     }
    },
    "outputs": [
@@ -182,7 +182,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "fsharp"
+     "languageId": "dotnet-interactive.fsharp"
     }
    },
    "outputs": [
@@ -215,7 +215,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "fsharp"
+     "languageId": "dotnet-interactive.fsharp"
     }
    },
    "outputs": [],
