--- a/en/ScratchPad.ipynb
+++ b/en/ScratchPad.ipynb
@@ -839,6 +839,24 @@
      "languageId": "dotnet-interactive.fsharp"
     }
    },
+   "outputs": [],
+   "source": [
+    "let f a = \n",
+    "    let q = a.Split ' '\n",
+    "    q\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
