--- a/en/Types.ipynb
+++ b/en/Types.ipynb
@@ -14,11 +14,93 @@
    "source": [
     "### Types\n",
     "\n",
-    "We have covered the basics of functions in F\\#, and defined some properties that difference them from routines or procedures in other languages. We also presented the primitive types as an example, but program with a reasonable chance of success, it is necessary for the language to be able to aggregate different primitive types in more complex ones. In the case of object oriented languages, one builds a hierarchy of classes that represent the domain one is working on. Those classes encapsulate not only data (that is described in types) but also their associated behavior through methods. \n",
+    "We have covered the basics of functions in F\\#, and defined some properties that difference them from routines or procedures in other languages. We have also seen how one can combine functions together. That is the first aspect about defining functions: how they behave, and how one can encapsulate this behavior in one or several functions that can be composed to generate results. For example, the behavior of our `vendingMachine` is to give you some product once you provided enough money and selected your treat with a keyboard. \n",
+    "The second aspect that is _needed_ to define the function is the type of input and output. Going back to our first example, one had a table that represented the function `carColor`, with the color of each car in a block. A completely different function would be `carHorsePower`, where for each car in the block, you write down the horsepower. Clearly here the inputs of both functions are the same, the license plate, but the outputs are different. If our vending machine does not take paper bills, and only credit cards, the input will be different, but you still get your beloved chips, that is, the outputs of `vendingMachine` and the modern `vendingMachineWithCreditCard` are the same, but the inputs are different.\n",
+    "\n",
+    "Then, to completely define a function, you need to specify (code...) the behavior of the function _and_ the types of inputs and outputs. These are two sides of the same coin, and one cannot live without the other. And that is where the type of inputs and a outputs of the real world need to be properly represented by your code. And that is where the language provides you with the tools to define these types. \n",
+    "\n",
+    "How to define the kind of inputs and outputs of your functions? To start, typically one writes down a bullet list of all the relevant characteristics of them. In the case of colors of the cars in the block, the inputs are the license plates that usually are letters and numbers, so in our code model, that would be some kind of string. How about the outputs? One can use the usual color names, as we did. That would be represented by a collection of strings.\n",
+    "\n",
+    "> Or, one can go for more detail and use the names of the colors [each car model has](https://www.caranddriver.com/features/g28196287/wildest-paint-colors-for-sale/). That would be a more complete collection of colors, but this also would affect the inputs of our function, because we need now also the name of the car model. Going further, the name of the color probably changes with the years model, so we would need that too. \n",
+    "\n",
+    "> Can you come up with the inputs and outputs of the `carHorsePower`? Start with a minimal description, and then go into more details. Would it be ok to represent the horse power as a positive floating point number? Is that enough? Or that is too many?\n",
+    "\n",
+    "For our vending machine with bills, our inputs are going to be the number of bills of each denomination one introduced in the machine, and a letter and a number to determine which product the customer wants:\n",
+    "\n",
+    "- Number of bills of each denomination\n",
+    "- A letter\n",
+    "- A number \n",
+    "\n",
+    " The outputs are possible products, that can be minimallistically modeled by saying\n",
+    "\n",
+    "- The product brand\n",
+    "- The product type (chocolate, chips, etc.)\n",
+    "\n",
+    "If we have a vending machine with credit cards, our input will be slightly different, since we need to model a credit card with\n",
+    "\n",
+    "- Carholder's name\n",
+    "- Card number\n",
+    "- Expiration date\n",
+    "- CVV number \n",
+    "\n",
+    "Let us examine how we can map each of these characteristics into the types computer understand. Clearly the cardholder's name of a credit card can be a string, the expiration date is, well, a date. \n",
+    "How about the type of the product? In principle can also be a string too. However, it looks like one can be more specific: for a food vending machine, one can make a bullet list of the possible food types:\n",
+    "\n",
+    "- chips\n",
+    "- chocolate\n",
+    "- candy\n",
+    "\n",
+    "and so on. There are also electronics vending machines, so  one would have\n",
+    "\n",
+    "- phone\n",
+    "- speakers\n",
+    "- headphones\n",
+    "- etc. \n",
+    "\n",
+    "The bullet list can be long, but probably one can write it down in a page (or, maybe it is provided by your vending machine client). \n",
+    "\n",
+    "It looks like one can classify the characteristics of inputs and outputs more broadly. On one hand, the cardholder's name of a credit card and expiration dates are huge (even infinite) collections that can not be determined _a priori_. \n",
+    "On the other hand, we have some features that belong to a well predefined collection (car colors, types of products). Notice also that these two kind of types can be compound together in inputs or outputs, according to the bullet lists we wrote down. \n",
+    "\n",
+    "In the next sections we will see how to build these inputs and outputs in F\\#.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Discriminated unions\n",
+    "\n",
+    "One of the key aspects of F\\# (and other functional languages) is that it provides with a specific syntax to model those characteristics of inputs and outputs that belong to a well predefined collection. If you are"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "\n",
-    "In the case of functional F\\#, and other functional languages, there is no need to attach behavior to types. Let us remember that functions always receive inputs and _create_ outputs, and also, all values are inmutable. On the contrary, methods in a class are designed to change (that is, _mutate_) values of an instance of that class. \n",
-    "[FP vs OP](https://betterprogramming.pub/functional-programming-vs-object-oriented-programming-why-you-dont-need-to-choose-29820f89f348)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "- Say something about validation?\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "\n",
     "#### Type inference\n",
     "\n",
@@ -162,6 +244,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Comment on FP vs OOP ?\n",
+    "\n",
+    "\n",
+    " \n",
+    "On the contrary, methods in a class are designed to change (that is, _mutate_) values of an instance of that class. \n",
+    "[FP vs OP](https://betterprogramming.pub/functional-programming-vs-object-oriented-programming-why-you-dont-need-to-choose-29820f89f348)\n",
+    "\n",
+    "We also presented the primitive types as an example, but to program with a reasonable chance of success, it is necessary for the language to be able to aggregate different primitive types in more complex ones. In the case of object oriented languages, one builds a hierarchy of classes that represent the domain one is working on. Those classes encapsulate not only data (that is described in types) but also their associated behavior through methods. In the case of functional F\\#, and other functional languages, there is no need to attach behavior to types.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "#### Thinking with types\n",
     "\n",
     "As said before, almost all programming languages provide an idea of aggregating simple types (strings, bools, ints, etc.) into more complex ones, which is needed to properly describe a domain. The basic data of a user (name, email, etc.) can be put together in a type, the email data (to, from, subject, text, etc.) in another one and so on. Combining these new types one can generate more and more complex ones, until you can build, for example, all the types needed for an email application. \n",
