Working the intro of types

--- a/en/Types.ipynb
+++ b/en/Types.ipynb
@@ -12,10 +12,12 @@
     }
    },
    "source": [
-    "### Types\n",
+    "To completely define a function, you not only need to establish its behavior, but also the inputs and outputs. That is where _types_ come! \n",
     "\n",
-    "We have covered the basics of functions in F\\#, and defined some properties that difference them from routines or procedures in other languages. We have also seen how one can combine functions together. That is the first aspect about defining functions: how they behave, and how one can encapsulate this behavior in one or several functions that can be composed to generate results. For example, the behavior of our `vendingMachine` is to give you some product once you provided enough money and selected your treat with a keyboard. \n",
-    "The second aspect that is _needed_ to define the function is the type of input and output. Going back to our first example, one had a table that represented the function `carColor`, with the color of each car in a block. A completely different function would be `carHorsePower`, where for each car in the block, you write down the horsepower. Clearly here the inputs of both functions are the same, the license plate, but the outputs are different. If our vending machine does not take paper bills, and only credit cards, the input will be different, but you still get your beloved chips, that is, the outputs of `vendingMachine` and the modern `vendingMachineWithCreditCard` are the same, but the inputs are different.\n",
+    "### Thinking with types\n",
+    "\n",
+    "We have covered the basics of functions in F\\#, and defined some properties that difference them from routines or procedures in other languages. We have also seen how one can combine functions together. That is the first aspect about defining functions: how they behave, and how one can encapsulate this behavior in one or several functions that can be composed to generate results. In our example, the behavior of our `vendingMachine` is to give you some product once you provided enough money and selected your treat with a keyboard. \n",
+    "The second aspect that is _needed_ to define the function is what sort of inputs and outputs it has. Going back to our first example, one had a table that represented the function `carColor`, with the color of each car in parked in a block. A completely different function would be `carHorsePower`, where for each car in the block, you write down the horsepower. Clearly here the inputs of both functions are the same, the license plate, but the outputs are different. If our vending machine does not take paper bills but credit cards, the input will be different, but you still get your beloved chips, that is, the outputs of `vendingMachine` and the modern `vendingMachineWithCreditCard` are the same, but the inputs are different.\n",
     "\n",
     "Then, to completely define a function, you need to specify (code...) the behavior of the function _and_ the types of inputs and outputs. These are two sides of the same coin, and one cannot live without the other. And that is where the type of inputs and a outputs of the real world need to be properly represented by your code. And that is where the language provides you with the tools to define these types. \n",
     "\n",
@@ -25,7 +27,7 @@
     "\n",
     "> Can you come up with the inputs and outputs of the `carHorsePower`? Start with a minimal description, and then go into more details. Would it be ok to represent the horse power as a positive floating point number? Is that enough? Or that is too many?\n",
     "\n",
-    "For our vending machine with bills, our inputs are going to be the number of bills of each denomination one introduced in the machine, and a letter and a number to determine which product the customer wants:\n",
+    "For our vending machine with bills, our inputs are going to be the number of bills of each denomination  introduced in the machine, and a letter and a number to determine which product the customer wants:\n",
     "\n",
     "- Number of bills of each denomination\n",
     "- A letter\n",
@@ -42,6 +44,8 @@
     "- Card number\n",
     "- Expiration date\n",
     "- CVV number \n",
+    "\n",
+    "A _type_ is the tool the computer languages provide to group or aggregate the properties of the model of any entity of our domain. As we all know, computers only understand only 0s and 1s bits at the lowest level, however, they are presented typically as chunks _bytes_ of 8 bits each. Putting bytes together one can have the basic types of all languages, such as integer and float numbers in all of their variations (signed or unsigned integers, integers of different size, float numbers of different sizes).  \n",
     "\n",
     "Let us examine how we can map each of these characteristics into the types computer understand. Clearly the cardholder's name of a credit card can be a string, the expiration date is, well, a date. \n",
     "How about the type of the product? In principle can also be a string too. However, it looks like one can be more specific: for a food vending machine, one can make a bullet list of the possible food types:\n",
