--- a/en/Types.ipynb
+++ b/en/Types.ipynb
@@ -45,16 +45,18 @@
     "- Expiration date\n",
     "- CVV number \n",
     "\n",
-    "A _type_ is the tool the computer languages provide to group or aggregate the properties of the model of any entity of our domain. As we all know, computers only understand only 0s and 1s bits at the lowest level, however, they are presented typically as chunks _bytes_ of 8 bits each. Putting bytes together one can have the basic types of all languages, such as integer and float numbers in all of their variations (signed or unsigned integers, integers of different size, float numbers of different sizes).  \n",
+    "A _type_ is the tool the computer languages provide to group or aggregate the properties of the model of any entity of our domain. As we all know, computers only understand only 0s and 1s bits at the lowest level, however, they are presented typically as chunks _bytes_ of 8 bits each. Putting bytes together one can have the basic types of all languages, such as integer and float numbers in all of their variations (signed or unsigned integers, integers of different size, float numbers of different sizes). Other basic types, such as strings or chars, even booleans, depend on the way each language implements them. \n",
     "\n",
-    "Let us examine how we can map each of these characteristics into the types computer understand. Clearly the cardholder's name of a credit card can be a string, the expiration date is, well, a date. \n",
-    "How about the type of the product? In principle can also be a string too. However, it looks like one can be more specific: for a food vending machine, one can make a bullet list of the possible food types:\n",
+    "All contemporary languages can build compound types using these basic types. For example, if we need to model a wallet, we will need a way to represent money bills, credit cards, personal id, etc. Each of these elements in turn needs also to be modeled, and so on. Therefore, the wallet will be represented as a hierarchical aggregation of simpler models that, at the very bottom of it, will resort to basic types. \n",
+    "\n",
+    "There is also another aspect of modelling the real world entities with types that needs attention. Let us go back to our examples and examine how we can map each of the properties of our models into simpler types. Clearly the cardholder's name of a credit card can be a string, the expiration date is, well, a date. \n",
+    "How about the type of the product? In principle can also be a string too. However, it seems that one can be more specific: for a food vending machine, one can make a bullet list of the possible food types:\n",
     "\n",
     "- chips\n",
     "- chocolate\n",
     "- candy\n",
     "\n",
-    "and so on. There are also electronics vending machines, so  one would have\n",
+    "and so on. There are also electronics vending machines, so one would have\n",
     "\n",
     "- phone\n",
     "- speakers\n",
@@ -63,10 +65,13 @@
     "\n",
     "The bullet list can be long, but probably one can write it down in a page (or, maybe it is provided by your vending machine client). \n",
     "\n",
-    "It looks like one can classify the characteristics of inputs and outputs more broadly. On one hand, the cardholder's name of a credit card and expiration dates are huge (even infinite) collections that can not be determined _a priori_. \n",
-    "On the other hand, we have some features that belong to a well predefined collection (car colors, types of products). Notice also that these two kind of types can be compound together in inputs or outputs, according to the bullet lists we wrote down. \n",
+    "It looks like one can classify the characteristics of inputs and outputs more broadly. On one hand, the cardholder's name of a credit card and expiration dates are huge (even infinite) collections that can not be determined _a priori_. On the other hand, we have some features that belong to a well predefined collection (car colors, types of products). \n",
     "\n",
-    "In the next sections we will see how to build these inputs and outputs in F\\#.\n"
+    "Notice also that these two kind of types can be compound together in inputs or outputs, according to the bullet lists we wrote down. \n",
+    "\n",
+    "One of the greatest features of F\\# is to provide precise ways to implement these two kind of types. In the next sections we will see how to build these inputs and outputs in F\\#.\n",
+    "\n",
+    "By the way, the keyword that F\\# uses to build complex types is, of course, `type` ;-D. \n"
    ]
   },
   {
@@ -76,8 +81,142 @@
    "source": [
     "# Discriminated unions\n",
     "\n",
-    "One of the key aspects of F\\# (and other functional languages) is that it provides with a specific syntax to model those characteristics of inputs and outputs that belong to a well predefined collection. If you are"
+    "One of the key aspects of F\\# (and other functional languages) is that it provides a specific syntax to model those characteristics of inputs and outputs that belong to a well predefined collection. These are called _discriminated unions_. \n",
+    "\n",
+    "The type for our food `vendingMachine` would be:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "type FoodProduct =\n",
+    "    | Chips\n",
+    "    | Chocolate\n",
+    "    | Candy "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "while for the electronics we could have:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "type Electronics = \n",
+    "    | Phones\n",
+    "    | Speakers\n",
+    "    | Headphones"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> It is customary to use `PascalCase` for types.\n",
+    "\n",
+    "In the expressions above we are defining a type with a name (`FoodProduct`, `Electronics`) that can have several  case types. It is important to stress the fact that the cases of each discriminated union type are _disjoint_, that is, can not be accessed at the same time. For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "let s = Electronics.Speakers"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`s` represents of course an speaker, and since it is inmutable, there is no possible way that can be a phone or a headphone. \n",
+    "\n",
+    "So how can we define functions with discriminated unions? Let us write a function `price` that receives an input of type `Electronics` and gives us the price:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "let price electronic = \n",
+    "    match electronic with \n",
+    "    | Phones -> 435\n",
+    "    | Speakers -> 29\n",
+    "    | Headphones -> 122"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "price: 29\n"
+     ]
+    }
+   ],
+   "source": [
+    "let p = price s\n",
+    "printfn \"price: %A\" (price s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
