Ready to open next level in Vending machine, solving problem with slot occupancy

--- a/en/VendingMachine01.ipynb
+++ b/en/VendingMachine01.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -106,12 +106,54 @@
     "    | Shelf of Slot list \n",
     "\n",
     "type ShelfConfig =\n",
-    "    | Config of SlotSize list     \n"
+    "    | Config of SlotSize list     \n",
+    "\n",
+    "let shelfSize shelfConfig = \n",
+    "    let (Config slots) = shelfConfig\n",
+    "    slots.Length \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "let spaces slotSize = \n",
+    "    match slotSize with \n",
+    "    | Single -> 1 \n",
+    "    | Double -> 2 \n",
+    "    | Triple -> 3 \n",
+    "\n",
+    "let slotIndex (Config shelfConfig) = \n",
+    "    shelfConfig\n",
+    "    |> List.map spaces \n",
+    "    |> List.scan (fun s a -> a + s ) 0  \n",
+    "    |> List.map (fun i -> i+1)  // Starting scan in 1 avoids this\n",
+    "    |> List.take shelfConfig.Length \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Shelves functions "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -125,20 +167,8 @@
     "let firstSlotConfig = Config [Single;Single;Double;Double;Single;Single;Double]\n",
     "let singleConfig = List.init 10 (fun _ -> Single) \n",
     "                    |> Config \n",
+    " \n",
     "\n",
-    "\n",
-    "\n",
-    "let spaces slotSize = \n",
-    "    match slotSize with \n",
-    "    | Single -> 1 \n",
-    "    | Double -> 2 \n",
-    "    | Triple -> 3 \n",
-    "\n",
-    "let slotIndex (Config shelfConfig) = \n",
-    "    shelfConfig\n",
-    "    |> List.map spaces \n",
-    "    |> List.scan (fun s a -> a + s ) 0 \n",
-    "    |> List.map (fun i -> i+1)\n",
     "\n",
     "\n",
     "// [1;2;3;5;7;8;9;10]\n",
@@ -149,22 +179,6 @@
     "    slotIndex singleConfig \n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "fsharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "//let firstShelf = Shelf [fanta;shot;nachos;nachos;drf;shot;nachos]"
    ]
   },
   {
@@ -194,7 +208,51 @@
     "        Product = food  \n",
     "        Occupancy = occ \n",
     "\n",
-    "    }"
+    "    }\n",
+    "    "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    }
+   },
+   "source": [
+    "Now we want to populate the shelf doing something like this:\n",
+    "```fsharp\n",
+    "let firstShelf = Shelf [fanta;shot;nachos;nachos;drf;shot;nachos]\n",
+    "```\n",
+    "but the problem is that one can put a single slot product into a double one. How can we solve this?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Scan list example\n",
+    "\n",
+    "Note that it always generates an extra element, with the `fold` applied completely to the list. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.fsharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "[1;1;2;2;1;1;2]\n",
+    "    |> List.scan (fun s a -> a + s ) 1"
    ]
   }
  ],
